styles/project2.css
:root {
    --dark-green: #595E48;
    --medium-green: #919682;
    --light-green: #C7CDBF;
    --off-green: #F0E1D4;
    --light-pink: #EECFCA;
    --dark-pink: #DCA198;
    --light-brown: #C7A491;
    --dark-brown: #784123;
    --cream: #FFF2ED; /*#F9EEE0*/
}

/* =====================
    PAGE CONTAINER
===================== */
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body{
    display: flex;
    flex-direction: column;
    margin:0;
    padding:0;
    background: linear-gradient(to bottom right, var(--light-pink), var(--dark-pink));
    color: var(--dark-green);
}

/* =====================
General Settings
===================== */

.button {
    display: inline-block;
    padding: 10px 20px;
    border: 2px solid var(--cream);
    border-radius: 30px;
    background: linear-gradient(to bottom right, var(--dark-pink), var(--dark-brown));
    text-decoration: none;
}
.button:hover{
    background: linear-gradient(to bottom right, var(--dark-pink), var(--light-pink));
}


a {
    color: var(--cream);
    font-weight: 900;

}

h1, h2, h3, h4, h5, h6 {
    margin: 0;
}

h1 {
    color: var(--dark-brown);
    font-size: 48px;
}

h2{
    color: var(--dark-pink);
    font-size: 36px;
}

h3 {
    color: var(--dark-brown);
    font-size: 24px;
}

b {
    color: var(--dark-brown);
}

ul {
    padding: 0 24px;
}

/* =====================
    Header, Nav & Footer
===================== */

nav {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    padding: 16px;
    background: linear-gradient(45deg, var(--dark-green), var(--medium-green));
}

nav > a {
    text-decoration: none;
    color: var(--light-green);
}

footer {
    width: 100%;
    padding: 16px 0;
    text-align: center;
    background: linear-gradient(315deg, var(--dark-green), var(--medium-green));
    color: var(--light-green);
}

/* =====================
    Content LAYOUT
===================== */

.content {
    display: flex;
    flex-direction: column;
    gap: 16px;
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 24px;
    background: linear-gradient(315deg, var(--off-green), var(--light-green));
    border-left: 4px solid var(--medium-green);
    border-right: 4px solid var(--medium-green);
    box-shadow: 0px 0px 12px var(--dark-brown);
}


/* =====================
    Sections LAYOUT
===================== */
.core-proj-info, .project-middle, .proj-media {
    padding: 16px;
    border-radius: 30px;
    background-color: var(--cream);
    border: 2px double var(--medium-green);
    box-shadow: 0px 0px 8px var(--dark-green);
}

.core-proj-info {
    margin-top: 16px;
}

.project-middle {
    display: flex;
    flex-wrap: wrap;
    gap: 24px;
}

.proj-media {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    gap: 16px;
    margin-bottom: 16px;
}

/* =====================
    Proj Middle 
===================== */
.full-row {
    flex: 0 0 100%;
}

.half-row {
    flex: 1 1 calc((100% - 32px) /2);
}

.gameplay {
    
}

.proj-features {
    
}

.controls {
    
}

/* =====================
    Media Middle 
===================== */

.photo-section, .clip-section {
    flex: 1;
}

.clip-area, .photo-area {
    display: flex;
    flex-wrap: wrap;
    gap: 16px;
}

.clip-card, .photo-card {
    padding: 1rem;
    border: 2px solid var(--dark-pink);
    border-radius: 8px;
    background: linear-gradient(180deg, var(--light-pink), var(--dark-pink));
    flex: 1 1 320px;
    min-width: 280px;
}

.clip-card iframe {
    width: 100%;
    aspect-ratio: 16 / 9;
}

